# GW2-InGame-Helper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: BUILD.md  CATALOG.md  RAIDCORE.md  RELEASE_NOTES.md  description.html
src/: AddonPaths.cpp  AddonPaths.h  BrowserTabs.cpp  BrowserTabs.h  CheatSheets.cpp  CheatSheets.h  Globals.h  HelperQuickAccess.cpp  HelperQuickAccess.h  HomePage.cpp  HomePage.h  ItemLookup.cpp  ItemLookup.h  QuickAccessIcon.h  RaidFood.cpp  RaidFood.h  Settings.cpp  Settings.h  Sites.cpp  Sites.h  UI.cpp  UI.h  WikiBrowser.cpp  WikiBrowser.h  WikiIpc.h  entry.cpp
src/helper/: BootJs.h  CssCompat.cpp  CssCompat.h  CssProxy.cpp  CssProxy.h  main.cpp
tools/: test_css_downlevel.py  validate_sites.py
